--- a/mobilearn/style.css
+++ b/mobilearn/style.css
@@ -14,8 +14,9 @@
 }
 
 @media(prefers-color-scheme: dark) {
-  body {
-    background-color: #323232;
+  * {
+    background-color: #282828;
+    color: white;
   }
   .main_item, .category_item{
     background-color: #323232;
