--- a/mobilearn/style.css
+++ b/mobilearn/style.css
@@ -1,3 +1,7 @@
+:root {
+  color-scheme: light dark;
+}
+
 @font-face {
   font-family: 'Panton';
   src: url('fonts/Panton-SemiBold.woff') format('woff'),
