--- a/mobilearn/style.css
+++ b/mobilearn/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'lato';
-    src: url('fonts/lato.ttf') format('truetype');
+    font-family: 'RobotoCondensed-Regular';
+    src: url('fonts/RobotoCondensed-Regular.ttf') format('truetype');
 }
 
 * {
-    font-family: 'lato', sans-serif;
+    font-family: 'RobotoCondensed-Regular', sans-serif;
     padding: 1px;
 }
 
