--- a/mobilearn/style.css
+++ b/mobilearn/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'RobotoCondensed-Regular';
-    src: url('fonts/RobotoCondensed-Regular.ttf') format('truetype');
+    font-family: 'Roboto-Regular';
+    src: url('fonts/Roboto-Regular.ttf') format('truetype');
 }
 
 * {
-    font-family: 'RobotoCondensed-Regular', sans-serif;
+    font-family: 'Roboto-Regular', sans-serif;
     padding: 1px;
 }
 
