--- a/mobilearn/style.css
+++ b/mobilearn/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: 'System';
-    src: url('file:///android_res/font/system.ttf') format('truetype');
+    font-family: 'Asap-Regular';
+    src: url('fonts/Asap-Regular.ttf') format('truetype');
 }
 
 * {
-    font-family: 'System', sans-serif;
+    font-family: 'Asap-Regular', sans-serif;
     padding: 1px;
 }
 
