--- a/mobilearn/style.css
+++ b/mobilearn/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Narrow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 
 * {
-    font-family: 'PT Sans Narrow', sans-serif;
+    font-family: 'PT Sans', sans-serif;
     padding: 1px;
 }
 
